--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
 		    <div class="home">
 		        <div id="header" class="content">
 		            <div class="stars"></div>
-		            <img class="bgc" src="image/beijing.jpg" width="100%" alt="">
+		            <img class="bgc" src="lab01/image/beijing.jpg" width="100%" alt="">
 		            <h3 class="title">欢迎来到我的个人网站</h3>
 		            <h3 class="titles">要不断的努力，才能成为更好的自己</h3>
 		            <img class="icon" src="img/down.html" alt="">
 					<div class='ribbon'>
-						<a href="task0.html"><span>0/1</span></a>
+						<a href="lab01/task0.html"><span>0/1</span></a>
 					</div>
 		            <div class='ribbon1'>
-						<a href="task1.html"><span>1/a</span></a>
-						<a href="task2.html"><span>1/b</span></a>
-						<a href="task3.html"><span>1/c</span></a>
-						<a href="task4.html"><span>1/d</span></a>
-						<a href="task5.html"><span>1/e</span></a>
+						<a href="lab01/task1.html"><span>1/a</span></a>
+						<a href="lab01/task2.html"><span>1/b</span></a>
+						<a href="lab01/task3.html"><span>1/c</span></a>
+						<a href="lab01/task4.html"><span>1/d</span></a>
+						<a href="lab01/task5.html"><span>1/e</span></a>
 		            </div>
-
+					<div class='ribbon2'>
+						<a href="lab02/index.html"><span>2/1</span></a>
+					</div>
 		        </div>
 		    </div>
 	</body>
