--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 					<div class='ribbon2'>
 						<a href="lab02/index.html"><span>2/1</span></a>
 					</div>
+					<div class='ribbon3'>
+						<a href="lab03/demo1.html"><span>3/1</span></a>
+						<a href="lab03/demo2.html"><span>3/2</span></a>
+					</div>
 		        </div>
 		    </div>
 	</body>
