--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 		            <h3 class="title">欢迎来到我的个人网站</h3>
 		            <h3 class="titles">要不断的努力，才能成为更好的自己</h3>
 		            <img class="icon" src="img/down.html" alt="">
+					<div class='ribbonn'>
 					<div class='ribbon'>
 						<a href="lab01/task0.html"><span>0/1</span></a>
 					</div>
+					
 		            <div class='ribbon1'>
 						<a href="lab01/task1.html"><span>1/a</span></a>
 						<a href="lab01/task2.html"><span>1/b</span></a>
@@ -31,6 +33,13 @@
 					<div class='ribbon3'>
 						<a href="lab03/demo1.html"><span>3/1</span></a>
 						<a href="lab03/demo2.html"><span>3/2</span></a>
+					</div>
+					<div class='ribbon4'>
+						<a href="lab04/demo1.html"><span>4/1</span></a>
+						<a href="lab04/demo2.html"><span>4/2</span></a>
+						<a href="lab04/demo3.html"><span>4/3</span></a>
+						<a href="lab04/demo4.html"><span>4/4</span></a>
+					</div>
 					</div>
 		        </div>
 		    </div>
