--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 						<a href="lab04/demo3.html"><span>4/3</span></a>
 						<a href="lab04/demo4.html"><span>4/4</span></a>
 					</div>
+					<div class='ribbon5'>
+						<a href="lab05/index.html"><span>5/1</span></a>
+					</div>
 					</div>
 		        </div>
 		    </div>
