--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 					<div class='ribbon5'>
 						<a href="lab05/index.html"><span>5/1</span></a>
 					</div>
+					<div class='ribbon8'>
+						<a href="CourseDesign/index.html"><span>CourseDesign</span></a>
+					</div>
 					</div>
 		        </div>
 		    </div>
