--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 					<div class='ribbon5'>
 						<a href="lab05/index.html"><span>5/1</span></a>
 					</div>
+					<div class='ribbon6'>
+						<a href="lab06/index.html"><span>6/1</span></a>
+					</div>
+					<div class='ribbon7'>
+						<a href="lab07/index.html"><span>7/1</span></a>
+					</div>
 					<div class='ribbon8'>
 						<a href="CourseDesign/index.html"><span>CourseDesign</span></a>
 					</div>
